2003-05-20  Dennis Cranston <dennis_cranston at yahoo com>

	* stickynotes.glade:  Fix various HIG bugs.
	  a. Fix mnemonic conflicts for Height/Help & Color/Close.  
	  b. The preferences dialog should not be resizable.  
  	  c. The term 'Applet' should not be exposed to the user. 
	  d. The preferences dialog should not have a separator to be
             consistant with all other applet preference dialogs in
             gnome-applets & gnome-panel modules.
	  This fixes bug #113468.
	     
2003-05-20  Loban A Rahman <loban@earthling.net>

	* stickynotes_applet.h: Fixed typo in header declaration.
	* stickynotes_applet.c: Code cleanup and speedup.
	* stickynotes.*: Added lock checkmenu item to note menu. This is still
	slightly buggy.
	* *.c *.h: More code and file format cleanup. Once again window
	management buttons are only visible when a note is in focus. Also, a
	note popup menu is now generated by libglade.
	* stickynotes_applet.c: Cleaned up bonobo ui code.

2003-05-19  Loban A Rahman <loban@earthling.net>

	* stickynotes.glade: Re-added HIG fixes done by Dennis.
	* stickynotes_applet.c: Fixed typo in prefs.
	* stickynotes_applet.c: Applet menu properly reflects current state.
	* stickynotes.c: New notes now appear correctly.
	* stickynotes_callbacks.c: Lock/unlocking menu item added to notes.
	* stickynotes.glade, stickynotes.c: Added missing "confirm on note
	  deletion" gconf option. No UI as it is "advanced".
	* stickynotes_applet.c, stickynotes_applet_callbacks.c: Polished UI.

2003-05-19  Loban A Rahman <loban@earthling.net>

	* *.*:
	  - Major changes!
	  - Fixed bug #109427 : Induvidial note color, locking, new resize
	    locations, and extra pref for note closure prompt.
	  - Fixed bug #111007 : multiple instances of applet now possible.
	  - Fixed bug #111380 : uses system colors by default.
	  - Simplified colors. Notes no longer "highlight" when in focus. Each
	    note's locked state and color is also induvidually saved.