@@ -1,3 +1,8 @@
+2003-05-20  Loban A Rahman <loban@earthling.net>
+
+	* stickynotes_applet.c: Fixed compile warnings,
+	  Bug #113616 now fully fixed.
+
 2003-05-20  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* stickynotes.glade:  Fix various HIG bugs.
